--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Crystal Alliance Broadcasting Team</title>
+		<title>Ethfure_Gaming</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						<ul>
 							<li><a href="#intro">Top</a></li>
 							<li><a href="#one">About us</a></li>
-							<li><a href="#two">Streaming Site list </a></li>
+							<li><a href="#two">Streaming Game list </a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,9 +36,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Welcome to our streams</h1>
-							<p>仲間と一緒にのんびりMMOPRPGを遊んだり<br />
-							緊迫した雰囲気の中一緒にFPSをやったりしています</p>
+							<h1>welcome to Ethfure_Gaming</h1>
+							<p>this is the Collaboration Channl of Youtube and any video site<br />
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -51,8 +51,8 @@
 							<a href="#comment" class="image"><img src="images/Twitch_sqreen.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>コメント読み上げに関して</h2>
-									<p>コメントは名前付きで読み上げられます、読み上げには結月ゆかりをの音声を用いて、全てのサイトとDiscordのコメントが読み上げられます</p>
+									<h2>Our Passion</h2>
+									<p>It was founded for that kind of freedom, where everyone can participate freely, take videos freely, and anyone can improve as long as they have the skills to do so.</p>
 								</div>
 							</div>
 						</section>
@@ -60,8 +60,8 @@
 							<a href="#discord" class="image"><img src="https://discordapp.com/assets/1c8a54f25d101bdc607cec7228247a9a.svg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>通話に関して</h2>
-									<p>Discordを用いて通話しながら配信をする場合があります、配信中はいろいろな人が自由に出入りしてますDiscordサーバーは以下から参加でします</p>
+									<h2></h2>
+									<p></p>
 									<ul class="actions">
 										<li><a href="https://discord.gg/nnMmNKm" target="_blank" class="button">Disocord</a></li>
 									</ul>
@@ -73,8 +73,8 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Stream site list</h2>
-							<p>私達は配信サービス<a href="https://restream.io" target="_blank">Restream</a>を用いて同時配信を行っています</p>
+							<h2>Stream game list</h2>
+							<p>私達はいくつかのゲームの動画を投稿する予定があります</p>
 							<div class="features">
 								<section>
 									<h3><i class="fab fa-twitch"></i> Twitch</h3>
